--- a/1Companies.html
+++ b/1Companies.html
@@ -11,13 +11,13 @@ a public donation of 10 million dollars, any company would jump on it. Economic 
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <br>
 <br>
-TELEVISION DELIVERS PEOPLE - RICHARD SERA 
+<a href="https://youtu.be/nbvzbj4Nhtk">TELEVISION DELIVERS PEOPLE - RICHARD SERA 
 <br>
 <br>
 <a href="https://youtu.be/nbvzbj4Nhtk">Shareholders buy stock in companies and don't even know what the companies do. 
 <br>
 <br>
-PROPAGANDA - EDWARD BERNAYS 
+<a href="http://www.historyisaweapon.org/defcon1/bernprop.html">PROPAGANDA - EDWARD BERNAYS 
 <br>
 <br>
 <a href="http://www.historyisaweapon.org/defcon1/bernprop.html">As a matter of fact, the practice of propaganda since the war has assumed very different forms from those prevalent twenty years ago. This new technique may fairly be called the new propaganda.
