--- a/real_stories.html
+++ b/real_stories.html
@@ -8,7 +8,7 @@ TABLE OF CONTENTS
 <br>
 <a href="1Companies.html">1.Companies & Shareholders 
 <br>
-2. Medias & Language Control
+<a href="2Language.html">2.Medias & Language Control
 <br>
 3. Food & Water Supply
 <br>
