--- a/1Companies.html
+++ b/1Companies.html
@@ -10,7 +10,7 @@ their bottom line. If Hitler came back from the dead and you could make 500 mill
 a public donation of 10 million dollars, any company would jump on it. Economic survival is the priority.
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <br>
-<a href="https://youtu.be/nbvzbj4Nhtk">TELEVISION DELIVERS PEOPLE - RICHARD SERA 
+<a href="https://youtu.be/nbvzbj4Nhtk">TELEVISION DELIVERS PEOPLE - RICHARD SERRA 
 <br>
 <br>
 <a href="https://youtu.be/nbvzbj4Nhtk">Shareholders buy stock in companies and don't even know what the companies do. 
