--- a/2Language.html
+++ b/2Language.html
@@ -1,7 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 What goes on over the news is what you know. It is the basis by which you make judgements, by which you think. You are the controlled product
 of news programming. Television programming dominates the exposure of ideas and information. Corporations that own networks control them.
-Corporations are not responsible to government, to their employees, to their shareholders. -Richard Sera
+Corporations are not responsible to government, to their employees, to their shareholders. -Richard Serra
 <br>
 <br>
 News & journalism are owned by what is it now, 6 companies that own 90% of what we read, watch or listen to? Do a quick image search and you 
