--- a/real_stories.html
+++ b/real_stories.html
@@ -10,7 +10,7 @@ TABLE OF CONTENTS
 <br>
 <a href="2Language.html">2.Medias & Language Control
 <br>
-3. Food & Water Supply
+<a href="3Food.html">3.Food & Water Supply
 <br>
 4. Hedonism & Consumption
 <br>
