--- a/real_stories.html
+++ b/real_stories.html
@@ -12,7 +12,7 @@ TABLE OF CONTENTS
 <br>
 <a href="3Food.html">3.Food & Water Supply
 <br>
-4. Hedonism & Consumption
+<a href="4HEDCOM.html">4.Hedonism & Consumerism
 <br>
 5. Neutrality & Demoralization
 <br>
