--- a/4HEDCOM.html
+++ b/4HEDCOM.html
@@ -1,3 +1,4 @@
+<p style = "font-family:MS UI Gothic;font-size:17px;">
 Toothpaste is industrial floor tile cleaner. (sodium lauryl sulfate)
 <br>
 Deodorant has soft metals in it
