--- a/real_stories.html
+++ b/real_stories.html
@@ -16,9 +16,9 @@ TABLE OF CONTENTS
 <br>
 <a href="5Demoralization.html">5.Neutrality & Demoralization
 <br>
-6. Distractions, Vanity, God Complex & Fads
+<a href="6Distraction.html">6.Distractions, Vanity, God Complex & Fads
 <br>
-7. Population Numbers & Number Games
+<a href="7Numbers.html">7.Population Numbers & Number Games
 <br>
 8. Computer UI, Web Aesthetics & Technology
 <br>
