--- a/real_stories.html
+++ b/real_stories.html
@@ -20,7 +20,7 @@ TABLE OF CONTENTS
 <br>
 <a href="7Numbers.html">7.Population Numbers & Number Games
 <br>
-8. Computer UI, Web Aesthetics & Technology
+<a href="8COM.html">8.Computer UI, Web Aesthetics & Technology
 <br>
 9. Copyright & Piracy
 <br>
