--- a/real_stories.html
+++ b/real_stories.html
@@ -4,27 +4,27 @@ Under Construction. Very basic versions of pages. Needs better visual organizati
 <br>
 TABLE OF CONTENTS
 <br>
-<a href="0Unbelief.html">0.Unbelief 
+<a href="0Unbelief.html">0.Unbelief</a>
 <br>
-<a href="1Companies.html">1.Companies & Shareholders 
+<a href="1Companies.html">1.Companies & Shareholders</a> 
 <br>
-<a href="2Language.html">2.Medias & Language Control
+<a href="2Language.html">2.Medias & Language Control</a>
 <br>
-<a href="3Food.html">3.Food & Water Supply
+<a href="3Food.html">3.Food & Water Supply</a>
 <br>
-<a href="4HEDCOM.html">4.Hedonism & Consumerism
+<a href="4HEDCOM.html">4.Hedonism & Consumerism</a>
 <br>
-<a href="5Demoralization.html">5.Neutrality & Demoralization
+<a href="5Demoralization.html">5.Neutrality & Demoralization</a>
 <br>
-<a href="6Distraction.html">6.Distractions, Vanity, God Complex & Fads
+<a href="6Distraction.html">6.Distractions, Vanity, God Complex & Fads</a>
 <br>
-<a href="7Numbers.html">7.Population Numbers & Number Games
+<a href="7Numbers.html">7.Population Numbers & Number Games</a>
 <br>
-<a href="8COM.html">8.Computer UI, Web Aesthetics & Technology
+<a href="8COM.html">8.Computer UI, Web Aesthetics & Technology</a>
 <br>
-9. Copyright & Piracy
+<a href="9Copyright.html">9.Copyright & Piracy</a>
 <br>
-10. World Conspiracies
+<a href="10WORLDCON.html">10.World Conspiracies</a>
 <br>
 11. Third World Slave Labour
 <br>
