--- a/4HEDCOM.html
+++ b/4HEDCOM.html
@@ -1,4 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+5.1 Hedonism & Consumerism
+<br>
+<br>
 Toothpaste is industrial floor tile cleaner. (sodium lauryl sulfate)
 <br>
 Deodorant has soft metals in it
