--- a/3Food.html
+++ b/3Food.html
@@ -1,4 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+3.1 Food & Water Supply
+<br>
+<br>
 There's shit in your food and water. Water is filtered of chemicals with other chemicals, and whether or not the fluoride or BPA are
 intentionally in the water they are there. Estrogen is in a lot of the food too. Also, if you are looking for an argument against 
 vegans, just look real closely at one. They do not look healthy. 
