--- a/2Language.html
+++ b/2Language.html
@@ -1,4 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+2.1 Medias & Language Control
+<br>
+<br>
 What goes on over the news is what you know. It is the basis by which you make judgements, by which you think. You are the controlled product
 of news programming. Television programming dominates the exposure of ideas and information. Corporations that own networks control them.
 Corporations are not responsible to government, to their employees, to their shareholders. -Richard Serra
