--- a/1Companies.html
+++ b/1Companies.html
@@ -1,4 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+1.1 Companies 
+<br>
+<br>
 Companies have one goal and it is to make money. Given the opportunity, a company will resort to any tactics they can to make more money. 
 Offshore tax shelters, rent-seeking, indentured servitude & sweat shops are all possibilities if an executive decides they will increase
 revenue for the new version of Angry Birds. Always pay attention when a company makes a small donation with every purchase to Africa,
