--- a/real_stories.html
+++ b/real_stories.html
@@ -6,7 +6,7 @@ TABLE OF CONTENTS
 <br>
 <a href="0Unbelief.html">0.Unbelief</a>
 <br>
-<a href="1Companies.html">1.Companies & Shareholders</a> 
+<a href="1Companies.html">1.Companies</a> 
 <br>
 <a href="2Language.html">2.Medias & Language Control</a>
 <br>
