--- a/6Distraction.html
+++ b/6Distraction.html
@@ -6,6 +6,8 @@
 <br>
 * Social Medias
 <br>
+Social Media is an easy way to waste your time & fuck your reputation
+<br>
 * Music
 <br>
 * Celebrity Worship
