--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -13,3 +13,8 @@ If anyone causes one of these little ones--those who believe in me--to stumble, 
 0.1 Unbelief
 <br>
 <br>   
+Not everything in life is defined by theories
+<br>   
+Pay attention to everything all the time anytime shit is never what it seems to be
+<br> 
+Pay attention to how certain people treat you
