--- a/4HEDCOM.html
+++ b/4HEDCOM.html
@@ -14,3 +14,5 @@ Adderall will fuck your brain up
 <br>
 <br>
 You don't need that much shit. Try to buy as little as possible.
+<br> 
+If you are poor, and even if you are wealthy don't spend money on crap you dont need. It will keep you poor
