--- a/6Distraction.html
+++ b/6Distraction.html
@@ -7,6 +7,8 @@
 * Social Medias
 <br>
 Social Media is an easy way to waste your time & fuck your reputation
+<br>  
+If I want my life to be better I need to stop wasting time on the computer and spend more time in REAL LIFE
 <br>
 * Music
 <br>
