--- a/5Demoralization.html
+++ b/5Demoralization.html
@@ -18,3 +18,5 @@ Stay neutral on shit.
 <br>
 * Nihilism, Atheism, Materialism & surrogate activity depression
 <br>
+Nostalgia for a time that has never existed will be confused; When it is actually an attempt to build a new state.
+<br>
