--- a/2Language.html
+++ b/2Language.html
@@ -39,3 +39,5 @@ is all I've known it's all I do. It did not pull any punches this shit was absol
 passes in public spaces imagine all the subtle ways music throws ideas at you. Feeling pleasure isn't that important to you and be a purist
 when it comes to media. Go for old media, it might fuck with you but in ways you can immediately recognize. 
 <br>
+Pay attention to clear & short writing & don't be pretentious to make what you are saying reach your audience as easily as possible
+<br>
