--- a/6Distraction.html
+++ b/6Distraction.html
@@ -16,3 +16,5 @@ If I want my life to be better I need to stop wasting time on the computer and s
 <br>
 * Snake Oil Salesman like Joe Rogan
 <br>
+Decision fatigue & Option paralysis will kill you. Just pick something
+<br>
