--- a/4HEDCOM.html
+++ b/4HEDCOM.html
@@ -16,3 +16,13 @@ Adderall will fuck your brain up
 You don't need that much shit. Try to buy as little as possible.
 <br> 
 If you are poor, and even if you are wealthy don't spend money on crap you dont need. It will keep you poor
+<br>
+<br>
+Related Social Concepts:
+<br> 
+https://en.wikipedia.org/wiki/Artificial_scarcity
+<br>
+https://en.wikipedia.org/wiki/Made_in_China
+<br>
+https://en.wikipedia.org/wiki/Industrial_society  
+<br>
