--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -18,3 +18,13 @@ Not everything in life is defined by theories
 Pay attention to everything all the time anytime shit is never what it seems to be
 <br> 
 Pay attention to how certain people treat you
+<br>   
+You have to define things by necessity, even if they are impossible to define. Quality should be anchored to a set of practiced things (that can be ignored if by necessity) and it should be something good;
+<br>
+Morality consists of drawing the line somewhere
+<br>
+<br> 
+Related Social Concepts:
+<br>
+https://en.wikipedia.org/wiki/Marxist%E2%80%93Leninist_atheism
+<br>
