--- a/1Companies.html
+++ b/1Companies.html
@@ -41,3 +41,16 @@ The new propaganda, having regard to the constitution of society as a whole, not
  But clearly it is the intelligent minorities which need to make use of propaganda continuously and systematically. In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America. Only through the active energy of the intelligent few can the public at large become aware of and act upon new ideas. Small groups of persons can, and do, make the rest of us think what they please about a given subject. But there are usually proponents and opponents of every propaganda, both of whom are equally eager to convince the majority.</a> 
 <br>
 <br> 
+Related Social Concepts:
+<br> 
+https://en.wikipedia.org/wiki/Industrial_society 
+<br> 
+https://en.wikipedia.org/wiki/Supply_and_demand 
+<br> 
+https://en.wikipedia.org/wiki/Company_scrip 
+<br> 
+https://en.wikipedia.org/wiki/Tax_shelter
+<br> 
+https://en.wikipedia.org/wiki/Rent-seeking
+<br> 
+https://en.wikipedia.org/wiki/Indentured_servitude
