--- a/2Language.html
+++ b/2Language.html
@@ -41,3 +41,24 @@ when it comes to media. Go for old media, it might fuck with you but in ways you
 <br>
 Pay attention to clear & short writing & don't be pretentious to make what you are saying reach your audience as easily as possible
 <br>
+<br>
+Related Social Concepts:
+<br>
+https://en.wikipedia.org/wiki/Overton_window
+<br>
+https://en.wikipedia.org/wiki/Information_society  
+<br>
+https://en.wikipedia.org/wiki/Tyranny_of_the_majority  
+<br>
+https://en.wikipedia.org/wiki/Pygmalion_effect  
+<br>
+https://en.wikipedia.org/wiki/Classical_conditioning
+<br>
+https://en.wikipedia.org/wiki/Perception_management
+<br>
+https://en.wikipedia.org/wiki/Project_MKUltra
+<br>  
+https://en.wikipedia.org/wiki/COINTELPRO
+<br>
+Controlled Opposition
+<br>
