--- a/3Food.html
+++ b/3Food.html
@@ -7,3 +7,13 @@ intentionally in the water they are there. Estrogen is in a lot of the food too.
 vegans, just look real closely at one. They do not look healthy. 
 <br>
 Add funny picture of a crumpled up Fast Food Burger image edit
+<br>
+<br>
+Related Social Concepts:
+<br>
+https://en.wikipedia.org/wiki/Artificial_scarcity  
+<br>
+https://en.wikipedia.org/wiki/Made_in_China  
+<br>
+https://en.wikipedia.org/wiki/Tragedy_of_the_commons 
+<br>
