--- a/5Demoralization.html
+++ b/5Demoralization.html
@@ -20,3 +20,17 @@ Stay neutral on shit.
 <br>
 Nostalgia for a time that has never existed will be confused; When it is actually an attempt to build a new state.
 <br>
+<br>
+Related Social Concepts:
+<br>  
+https://en.wikipedia.org/wiki/Project_MKUltra 
+<br>
+https://en.wikipedia.org/wiki/COINTELPRO 
+<br>
+https://en.wikipedia.org/wiki/Perception_management  
+<br>
+https://cowboystatedaily.com/2019/11/25/linguistic-weapons/ 
+<br>
+https://en.wikipedia.org/wiki/Pygmalion_effect
+<br>
+https://en.wikipedia.org/wiki/Tyranny_of_the_majority
