--- a/6Distraction.html
+++ b/6Distraction.html
@@ -18,3 +18,11 @@ If I want my life to be better I need to stop wasting time on the computer and s
 <br>
 Decision fatigue & Option paralysis will kill you. Just pick something
 <br>
+<br>
+Related Social Concepts:
+<br>
+https://en.wikipedia.org/wiki/Placebo  
+<br>
+https://en.wikipedia.org/wiki/Decision_fatigue  
+<br>
+https://en.wikipedia.org/wiki/Information_society
