--- a/real_stories.html
+++ b/real_stories.html
@@ -28,6 +28,8 @@ TABLE OF CONTENTS
 <br>
 11.Third World Slave Labour
 <br>
+12. Who sees your information
+<br>
 & More as time goes on
 <br>
 <br> 
