--- a/9Copyright.html
+++ b/9Copyright.html
@@ -2,3 +2,8 @@
 9.1 Copyright & Piracy
 <br>
 * Access to information is being RAPED
+<br>  
+<br> 
+Related Social Concepts:  
+<br>
+https://en.wikipedia.org/wiki/Information_society
