--- a/10WORLDCON.html
+++ b/10WORLDCON.html
@@ -1,3 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 10.1 World Conspiracies
 <br>
+<br>
+Related Social Concepts:
+<br>  
+https://en.wikipedia.org/wiki/False_flag
