--- a/7Numbers.html
+++ b/7Numbers.html
@@ -2,3 +2,9 @@
 7.1 Numbers
 <br>
 8 Billion Human Beings Population Number IS FUCKING INSANE... WHAT ARE THEY GONNA DO, PERFORM A CENSUS? COUNT HEADS?
+<br>
+<br>
+Related Social Concepts:
+<br>
+Linguistic weapons
+<br>
