--- a/8COM.html
+++ b/8COM.html
@@ -13,3 +13,11 @@ Focus on few projects
 Media should test the boundaries of quality once again and redevelop its ability. If we can apply proven techniques that have worked for centuries for making good art we can progress it;
 <br>
 the bleeding edge and the true potential of computers and the internet is still unknown
+<br>
+<br>
+Related Social Concepts:
+<br>
+https://en.wikipedia.org/wiki/Industrial_society
+<br>
+https://en.wikipedia.org/wiki/Information_society
+<br>
