--- a/moonmantest.html
+++ b/moonmantest.html
@@ -1,3 +1,92 @@
+<body style="background-image: url(&quot;blob:https://willtherealmoonmanpleasestandup.ytmnd.com/23cd0a33-e7af-4a6e-906d-56fd805a9322&quot;); background-repeat: repeat; background-color: rgb(0, 0, 0);">
+    <div id="corner" style="visibility: visible;">
+      <img src="https://assets.content.ytmnd.com/images/sites/corner_test.gif" usemap="#lc" alt="click for site info" id="corner_image">
+      <map name="lc" id="lc">
+        <area shape="poly" coords="0,0,100,0,0,100" href="#" id="corner_map_area" alt="click for site info">
+      </map>
+    </div>
+
+    <div id="infobar">
+
+      <div id="left_controls">
+        <div id="info_box_closer" class="logo5"></div>
+        <a href="https://ytmnd.com/">Back to YTMND</a>
+      </div>
+
+      <div id="site_info">
+
+        <div id="site_info_top">
+          <a id="site_profile_link" href="http://ytmnd.com/sites/1007372/profile">Site Profile</a>
+          <a id="comments_link" href="http://ytmnd.com/sites/1007372/profile#comments">Comments</a>
+        </div>
+
+        <div id="site_info_left">
+          <div>
+            <label>Title</label>
+            <div id="site_title"><a class="site_link_full" href="http://willtherealmoonmanpleasestandup.ytmnd.com" rel="external">(<span class="nsfw_warn">nsfw</span>)&nbsp;Moonman-The real moonman.</a></div>
+          </div>
+
+          <div>
+            <label>Author</label>
+            <div id="author"><a title="SOMEGUY420" class="user_name un_SOMEGUY420 ul_uid_381259 " href="https://ytmnd.com/users/SOMEGUY420">SOMEGUY420</a></div>
+          </div>
+
+          <div>
+            <label>Score</label>
+            <div id="score"><map class="sb_map" id="sb_wsc_imgmap_0" name="sb_wsc_imgmap_0"><area href="#" onclick="starbar.addons.wsc.on_click(0,'red'); return false;" onmouseover="starbar.addons.wsc.m_over(0,'red');" onmouseout="starbar.addons.wsc.m_out(0);" name="sb_wsc_imgmap_0_red" shape="rectangle" coords="0,0,32,12" alt="not work-safe"><area href="#" onclick="starbar.addons.wsc.on_click(0,'green'); return false;" onmouseover="starbar.addons.wsc.m_over(0,'green');" onmouseout="starbar.addons.wsc.m_out(0);" name="sb_wsc_imgmap_0_green" shape="rectangle" coords="32,0,65,12" alt="work-safe"></map><map class="sb_map" id="sb_fav_imgmap_0" name="sb_fav_imgmap_0"><area href="#" onclick="starbar.addons.fav.on_click(0); return false;" shape="rectangle" coords="0,0,34,12" alt="Fav it!"></map><img src="https://assets.content.ytmnd.com/images/starbar/red/475.png" alt="Score: 4.67 stars" usemap="#sb_imgmap_0" name="sb_img_0" class="sb_image" id="sb_img_0" width="60" height="12" border="0">&nbsp;<img class="sb_image" src="https://assets.content.ytmnd.com/images/starbar/nsw_check.png" name="sb_wsc_img_0" id="sb_wsc_img_0" usemap="#sb_wsc_imgmap_0" border="0">&nbsp;<img class="sb_image" src="https://assets.content.ytmnd.com/images/starbar/plusfav.png" name="sb_fav_img_0" id="sb_fav_img_0" usemap="#sb_fav_imgmap_0" border="0"></div>
+          </div>
+          <div id="facebook_junk"></div>
+
+        </div> <!-- END site_info left -->
+
+        <div id="site_info_right">
+          <div>
+            <label>Description</label>
+            <div id="description" class="rt_parse selected">The Intro to moonmans Platinum  album:Whitetopia.</div>
+          </div>
+
+          <div>
+            <label>Foreground</label>
+            <div id="fg_image_origin" class="rt_parse">moonman</div>
+          </div>
+
+          <div id="bg_image_origin_wrapper">
+            <label>Background</label>
+            <div id="bg_image_origin" class="rt_parse">moonman</div>
+          </div>
+
+          <div>
+            <label>Sound</label>
+            <div id="sound_origin" class="rt_parse">Moonman-Whitetopia Intro.</div>
+          </div>
+
+          <div>
+            <label>Keywords</label>
+            <div id="keyword_list"><div class="keyword">  <a class="keyword" href="http://ytmnd.com/keywords/moonman">moonman</a></div><div class="keyword">  <a class="keyword" href="http://ytmnd.com/keywords/R.I.P Farkle">R.I.P Farkle</a></div></div>
+          </div>
+
+        </div> <!-- END site_info_right -->
+      </div> <!-- END site_info -->
+    </div> <!-- END infobar -->
+
+  
+
+  <!--div id="a_plague_upon_your_house">
+   <div id="login_reg">
+    <a href="https://ytmnd.com/login">Login</a> or
+    <a href="https://ytmnd.com/register">register</a> to hide ads.
+    <div id="closer"></div>
+   </div>
+   <div class="box_aids">
+     <iframe name="fm_sky_box" id="fm_sky_box" src="" width="300" height="250"></iframe>
+   </div>
+  </div -->
+  <div id="restart_button" style="visibility: visible;"></div>
+
+ 
+
+
+<div id="foreground_image" style="background-image: url(&quot;blob:https://willtherealmoonmanpleasestandup.ytmnd.com/b0ae658f-cc2c-41f4-b0de-ab2df83dd6f8&quot;); background-position: center center; background-repeat: no-repeat;"></div><div id="zoom_text"></div></body>
 <div id="restart_button" style="visibility: visible;"></div>
 <div id="foreground_image" style="background-image: url(&quot;blob:https://willtherealmoonmanpleasestandup.ytmnd.com/b0ae658f-cc2c-41f4-b0de-ab2df83dd6f8&quot;); background-position: center center; background-repeat: no-repeat;"></div>
 <div id="zoom_text"></div>
