--- a/moonmantest.html
+++ b/moonmantest.html
@@ -84,7 +84,7 @@
   <div id="restart_button" style="visibility: visible;"></div>
 
  
-
+   </div>
 
 <div id="foreground_image" style="background-image: url(&quot;blob:https://willtherealmoonmanpleasestandup.ytmnd.com/b0ae658f-cc2c-41f4-b0de-ab2df83dd6f8&quot;); background-position: center center; background-repeat: no-repeat;"></div><div id="zoom_text"></div></body>
 <div id="restart_button" style="visibility: visible;"></div>
