--- a/moonmantest.html
+++ b/moonmantest.html
@@ -1,1 +1,1 @@
-<div id="foreground_image" style="background-image: url(&quot;blob:https://willtherealmoonmanpleasestandup.ytmnd.com/b0ae658f-cc2c-41f4-b0de-ab2df83dd6f8&quot;); background-position: center center; background-repeat: no-repeat;"></div>
+<div id="foreground_image" style="background-image: url(&quot;blob:http://reallydisgustingvasectomypictures.net/index.gif;); background-position: center center; background-repeat: no-repeat;"></div>
