--- a/real_stories.html
+++ b/real_stories.html
@@ -26,9 +26,9 @@ TABLE OF CONTENTS
 <br>
 <a href="10WORLDCON.html">10.World Conspiracies</a>
 <br>
-11.Third World Slave Labour
+11.Slave Labour
 <br>
-12. Who sees your information
+12.Surveillance
 <br>
 & More as time goes on
 <br>
