--- a/6Distraction.html
+++ b/6Distraction.html
@@ -18,6 +18,10 @@ If I want my life to be better I need to stop wasting time on the computer and s
 <br>
 Decision fatigue & Option paralysis will kill you. Just pick something
 <br>
+Lesson learned really
+<br>
+No point in playing into mindgames designed to keep you busy for as long as possible  
+<br>
 <br>
 Related Social Concepts:
 <br>
