--- a/2Language.html
+++ b/2Language.html
@@ -40,6 +40,8 @@ passes in public spaces imagine all the subtle ways music throws ideas at you. F
 when it comes to media. Go for old media, it might fuck with you but in ways you can immediately recognize. 
 <br>
 Pay attention to clear & short writing & don't be pretentious to make what you are saying reach your audience as easily as possible
+<br>  
+Intellectual in an ideal world would make people see more clearly, but they do the exact opposite.
 <br>
 <br>
 Related Social Concepts:
