--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -23,6 +23,8 @@ You have to define things by necessity, even if they are impossible to define. Q
 <br>
 Morality consists of drawing the line somewhere
 <br>
+Stop trying to appear as something, become it
+<br> 
 <br> 
 Related Social Concepts:
 <br>
