--- a/stories.html
+++ b/stories.html
@@ -146,3 +146,11 @@ He then noticed he had entered the local restaurant naked with a swastika painte
 Woops!
 <br> 
 <br> 
+<br> 
+<br> 
+Calm and collected stone man 
+<br> 
+become a rock 
+<br> 
+become THE rock
+<br> 
