--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -24,7 +24,9 @@ You have to define things by necessity, even if they are impossible to define. Q
 Morality consists of drawing the line somewhere
 <br>
 Stop trying to appear as something, become it
-<br> 
+<br>
+Be bold 
+<br>
 <br> 
 Related Social Concepts:
 <br>
