--- a/10WORLDCON.html
+++ b/10WORLDCON.html
@@ -2,6 +2,14 @@
 10.1 World Conspiracies
 <br>
 <br>
+*Perhaps conspiracies exist to keep abstract thinkers from doing anything risky; 
+<br>
+*Say you'll have someone who wants to overthrow government you weaken him by telling him nothing is worthwhile and it's all a simulation
+and so he is dehydrated and does nothing  
+<br>  
+*Mainland China http://reallydisgustingvasectomypictures.net/chinese.html
+<br>
+<br>
 Related Social Concepts:
 <br>  
 https://en.wikipedia.org/wiki/False_flag
