--- a/6Distraction.html
+++ b/6Distraction.html
@@ -4,6 +4,8 @@
 <br>
 * Phones
 <br>
+Phone Games https://en.wikipedia.org/wiki/Freemium_Isn%27t_Free
+<br>
 * Social Medias
 <br>
 Social Media is an easy way to waste your time & fuck your reputation
