--- a/real_stories.html
+++ b/real_stories.html
@@ -32,8 +32,12 @@ TABLE OF CONTENTS
 <br>
 13. Advertisements
 <br>
+14. Government
+<br>
 & More as time goes on
 <br>
 <br> 
 <br> 
 <br> 
+  
+<img xmlns="http://www.w3.org/1999/xhtml" src="img/discord-no-way-2.gif" alt="Discord? No Way!" />
