--- a/real_stories.html
+++ b/real_stories.html
@@ -39,5 +39,6 @@ TABLE OF CONTENTS
 <br> 
 <br> 
 <br> 
-  
+<a xmlns="http://www.w3.org/1999/xhtml" href="https://spyware.neocities.org/articles/discord.html">
+      <img src="img/discord-no-way-2.gif" alt="Discord? No Way!" /></a>  
 <img xmlns="http://www.w3.org/1999/xhtml" src="img/discord-no-way-2.gif" alt="Discord? No Way!" />
