--- a/8COM.html
+++ b/8COM.html
@@ -6,6 +6,8 @@
 <br>
 * Bloatware and slow Windows apps
 <br>
+* Return to Personal Websites
+<br>
 * Suggestions: WinAMP, Notepad++, Firefox, IrfanView 
 <br>
 Focus on few projects
@@ -15,6 +17,8 @@ Media should test the boundaries of quality once again and redevelop its ability
 the bleeding edge and the true potential of computers and the internet is still unknown
 <br>
 http://nothings.org/writing/websucks.html
+<br>
+https://github.com/jwise/28c3-doctorow/blob/master/transcript.md
 <br>
 <br>
 Related Social Concepts:
