--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -27,6 +27,8 @@ Stop trying to appear as something, become it
 <br>
 Be bold 
 <br>
+Do what you would like to see
+<br>
 <br> 
 Related Social Concepts:
 <br>
