--- a/6Distraction.html
+++ b/6Distraction.html
@@ -5,6 +5,8 @@
 * Phones
 <br>
 Phone Games https://en.wikipedia.org/wiki/Freemium_Isn%27t_Free
+<br>  
+Brain Damage http://wizdumgun.tv/pages/mobile.html
 <br>
 * Social Medias
 <br>
