--- a/10WORLDCON.html
+++ b/10WORLDCON.html
@@ -8,6 +8,8 @@
 and so he is dehydrated and does nothing  
 <br>  
 *Mainland China http://reallydisgustingvasectomypictures.net/chinese.html
+<br>    
+*Cults invading US Government https://pastebin.com/fjKjEyZ8/http://reallydisgustingvasectomypictures.net/premise.html
 <br>
 <br>
 Related Social Concepts:
