--- a/drawings.html
+++ b/drawings.html
@@ -1,6 +1,9 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 UNREAL DEPICTIONS OF EVENTS AND PERSONS:
+<a href="http://reallydisgustingvasectomypictures.net/SaltLake.jpg">Salt Lake Fishing</a>
 <br>
-<a href="Large_Scene.html">LARGE SCENE</a>
+<a href="http://reallydisgustingvasectomypictures.net/Large%20Scene.png">Pirates at Desert Port</a>
 <br>
-<a href="Human_Beings.html">HUMAN BEINGS</a>
+<a href="Human_Beings.html">Humans</a>
+<br>
+
