--- a/Human_Beings.html
+++ b/Human_Beings.html
@@ -1,6 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <a href="https://youtu.be/CwsIxXrclKY?t=170">HUMAN BEINGS</a>
 <div style="background-image: url('reallydisgustingvasectomypictures.net/index.gif');"> 
+<p style="background-image: url('reallydisgustingvasectomypictures.net/index.gif');">
 <br>
 <img src="Human_Beings1.jpg" width="250" height="250">
 <img src="Human_Beings2.jpg" width="250" height="250">
