--- a/real_stories.html
+++ b/real_stories.html
@@ -37,8 +37,12 @@ TABLE OF CONTENTS
 & More as time goes on
 <br>
 <br> 
+https://en.wikipedia.org/wiki/Logic#Formal_logic USE LOGICAL FORMATTING IF POSSIBLE https://en.wikipedia.org/wiki/Syllogism#Barbara_(AAA-1)
+https://upload.wikimedia.org/wikipedia/commons/a/a4/Argument_terminology_used_in_logic_%28en%29.svg
 <br> 
 <br> 
 <a xmlns="http://www.w3.org/1999/xhtml" href="https://spyware.neocities.org/articles/discord.html">
       <img src="img/discord-no-way-2.gif" alt="Discord? No Way!" /></a>  
+      
+      
 
