--- a/real_stories.html
+++ b/real_stories.html
@@ -37,7 +37,7 @@ TABLE OF CONTENTS
 & More as time goes on
 <br>
 <br> 
-https://en.wikipedia.org/wiki/Logic#Formal_logic USE LOGICAL FORMATTING IF POSSIBLE https://en.wikipedia.org/wiki/Syllogism#Barbara_(AAA-1)
+https://en.wikipedia.org/wiki/Logic#Formal_logic USE LOGICAL FORMATTING IF POSSIBLE and WAGWERS https://en.wikipedia.org/wiki/Syllogism#Barbara_(AAA-1)
 https://upload.wikimedia.org/wikipedia/commons/a/a4/Argument_terminology_used_in_logic_%28en%29.svg
 <br> 
 <br> 
