--- a/drawings.html
+++ b/drawings.html
@@ -5,4 +5,11 @@
 <br>
 <a href="Human_Beings.html">Humans</a>
 <br>
+<a href="http://reallydisgustingvasectomypictures.net/Tech.jpg">High_Tech_Arm</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/People.jpg">People</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/Land2.jpg">Watchmen</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/Land.png">Oriental Building</a>
 
