--- a/Companies.html
+++ b/Companies.html
@@ -5,7 +5,7 @@ Business Entities
 Companies aim solely to make money. No fucking exceptions. 
 <br>
 <br>
-Right off the bat you tell me this is clearly 'unsubstantiated conspiracy' (link to article Language) - B-but this coffee (link to mind altering drug article) company donates 0.01% of its funds (link to an article called lies or something) to NGOs! (link to article, six figure 
+Right off the bat you tell me this is clearly <a href="http://reallydisgustingvasectomypictures.net/Language.html">'unsubstantiated conspiracy'</a>- B-but this coffee (link to mind altering drug article) company donates 0.01% of its funds (link to an article called lies or something) to NGOs! (link to article, six figure 
 salary NGO owner) This is aimed, intentionally, to promote the good image of the company. This donation is made to rationalize your remorse after purchasing a product (because of its environmental or social damage) and/or rationalize the company as a 
 healthy, charitable entity within civilization. Simultaneously, do not forget that companies exploit cheap, expendable labour of poor countries at the given opportunity of turning a higher profit. Re-examine the priorities behind these actions.
 <br>
@@ -16,7 +16,7 @@ This is their objective.
 1.1 Strategies:
 <br>
 <br>
-*Donations: Because it improves public image. Headlines will advertise donations to a Progressive Movement and no further research into what they are ACTUALLY CONTRIBUTING TO will be made.(link to article Language)
+*Donations: Because it improves public image. Headlines will advertise donations to a <a href="http://reallydisgustingvasectomypictures.net/Language.html">Progressive Movement</a> and no further research into what they are ACTUALLY CONTRIBUTING TO will be made.
 <br>
 *Rent-seeking: Gain from a monopoly/use of influence to receive benefits from government. In 1945, corporations paid 50 percent of federal taxes. Now they pay about 5 percent. 
 <br>
