--- a/drawings.html
+++ b/drawings.html
@@ -1,4 +1,5 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+NOTE: Selectively pick favourite works for this gallery. You could probably remove a few of these.
 <a href="http://reallydisgustingvasectomypictures.net/SaltLake.jpg">Salt Lake Fishing</a>
 <br>
 <a href="http://reallydisgustingvasectomypictures.net/Large%20Scene.png">Pirates at Desert Port</a>
