--- a/Language.html
+++ b/Language.html
@@ -1,9 +1,10 @@
+<p style = "font-family:MS UI Gothic;font-size:17px;">
 Press Language & Linguistic Weapons
 <br>
 <br>
 News & journalism media are owned by 6 companies that own 90% of what you could potentially read, watch or listen to. Do a quick image search and you 
-can find a good amount of graphs showing consolidation. If these six media groups were to have any malicious intentions or any desire to collaborate and 
-preserve a narrative, it would be possible. If in any way it could benefit their profitability, their goals, they will do it.
+can find a good amount of graphs. If these six media groups were to have any malicious intentions or any desire to collaborate and 
+preserve a narrative, it would be possible. If in any way it could benefit them they will do it.
 <br>
 <br>
 Press is useless and has in most cases never been used for any good. What do you get from watching prepared information designed to manipulate you to believe things?
