--- a/Articles.html
+++ b/Articles.html
@@ -1,4 +1,5 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <a href="Companies.html">Companies</a> 
 <br>
+<a href="Language.html">Language</a> 
 <br>
