--- a/Language.html
+++ b/Language.html
@@ -45,7 +45,7 @@ That's all language.
 <br>
 <br>
 Progressive, progress... Democrat, democracy these words remind you of things you may think are good. So you begin to abstract what a progressive
-movement is, what it really means. It could advocate for murdering children and you would support it because it is  PROGRESS, PROGRESSIVE MOVEMENT
+movement is, what it really means. It could advocate for something bad and you would support it because it is  PROGRESS, PROGRESSIVE MOVEMENT
 <br>
 <br>
 1.3 Avoiding Language
