--- a/drawings.html
+++ b/drawings.html
@@ -6,9 +6,15 @@ NOTE: Selectively pick favourite works for this gallery. You could probably remo
 <br>
 <a href="Human_Beings.html">Humans</a>
 <br>
-<a href="http://reallydisgustingvasectomypictures.net/Tech.jpg">High_Tech_Arm</a>
+<a href="http://reallydisgustingvasectomypictures.net/People.jpg">Humans 1</a>
 <br>
-<a href="http://reallydisgustingvasectomypictures.net/People.jpg">People</a>
+<a href="http://reallydisgustingvasectomypictures.net/People2.jpg">Humans 2</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/People3.jpg">Humans 3</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/People4.jpg">Humans 4</a>
+<br>
+<a href="http://reallydisgustingvasectomypictures.net/Tech.jpg">High_Tech_Arm</a>
 <br>
 <a href="http://reallydisgustingvasectomypictures.net/Land2.jpg">Watchmen</a>
 <br>
