--- a/drawings.html
+++ b/drawings.html
@@ -1,5 +1,5 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-NOTE: Selectively pick favourite works for this gallery. You could probably remove a few of these.
+NOTE: Selectively pick favourite works for this gallery. You could probably remove a few of these
 <br>
 <a href="http://reallydisgustingvasectomypictures.net/SaltLake.jpg">Salt Lake Fishing</a>
 <br>
