--- a/secret.html
+++ b/secret.html
@@ -1,3 +1,24 @@
- <video width="640" height="480" controls>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Test</title>
+    <script type="text/css">
+    .center {
+      margin: 0 auto;
+    }
+    </script>
+  </head>
+  <body>
+    <div class="center">
+        <video width="640" height="480" controls>
   <source src="Hotel.mp4" type="video/mp4">
 </video> 
+      </video>
+    </div>
+  </body>
+ <style>
+div {
+  background-image: url('index.gif');
+}
+</style> 
+</html>
