--- a/secret.html
+++ b/secret.html
@@ -16,9 +16,12 @@
       </video>
     </div>
   </body>
+}
+</style> 
+</html>
+
+</html>
  <style>
 div {
   background-image: url('index.gif');
-}
-</style> 
 </html>
