--- a/secret.html
+++ b/secret.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="center">
-        <video width="640" height="480" controls>
-  <source src="Hotel.mp4" type="video/mp4">
+         <center><video width="640" height="480" controls>
+  <source src="Hotel.mp4" type="video/mp4"></center>
 </video> 
       </video>
     </div>
