--- a/secret.html
+++ b/secret.html
@@ -1,28 +1,29 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Signal_Intrusion</title>
+  
+<head>
+<title>Signal_Intrusion</title>
     <script type="text/css">
     .center {
     }
     </script>
-  </head>
-  <body>
-    <div class="center">
+</head>
+  
+<body>
+  
+ <div class="center">
          <center><video width="640" height="480" controls>
   <source src="Hotel.mp4" type="video/mp4"></center>
 </video> 
       </video>
-    </div>
-  </body>
-}
-</style> 
-</html>
 
-</html>
- <style>
+</body>
+  
+<style>
 div {
-  background-image: url('index.gif');
+background-image: url('index.gif');
 </html>
   
-  background-image: url('index.gif');
+<style> 
+  
+</html> 
