--- a/matrix.html
+++ b/matrix.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+div {
+  height: 200px;
+  width: 50%;
+  background-color: powderblue;
+}
 
 <style>
 div {
+  height: 100%;
+  width: 100%;
 background-image: url('matrix.gif');
 </html>
   
