--- a/matrix.html
+++ b/matrix.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-div {
-  height: 2000px;
-  width: 1920px;
-background-image: url('matrix.gif');
+  
+<head>
 
+</head>
+  
+<body>
+
+</body>
+   
 <style>
 div {
   height: 100%;
   width: 100%;
 background-image: url('matrix.gif');
-</html>
   
-<style> 
-
-</html>
+</style> 
+  
+</html> 
