--- a/matrix.html
+++ b/matrix.html
@@ -11,8 +11,8 @@
    
 <style>
 div {
-  height: 100%;
-  width: 100%;
+  height: 2000px;
+  width: 1920px;
 background-image: url('matrix.gif');
   
 </style> 
