--- a/matrix.html
+++ b/matrix.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html>
-  
-<head>
+html {
+  min-width: 100%;
+  min-height: 100%;
+  background-image: url('matrix.gif');
+  background-position: top center;
+  background-color: #000;
+}
 
-</head>
-  
-<body>
-
-</body>
-   
-<style>
-div {
-  height: 2000px;
+body {
   width: 1920px;
-background-image: url('matrix.gif');
-  
-</style> 
-  
-</html> 
+  height: 2000px;
+  background-color: #FFF;
+}
