--- a/matrix.html
+++ b/matrix.html
@@ -1,13 +1,34 @@
-html {
-  min-width: 100%;
+
+
+<!DOCTYPE html>
+<html>
+min-width: 100%;
   min-height: 100%;
   background-image: url('matrix.gif');
   background-position: top center;
   background-color: #000;
-}
-
-body {
-  width: 1920px;
+  
+<head>
+<title>Signal_Intrusion</title>
+    <script type="text/css">
+    .center {
+    }
+    </script>
+</head>
+  
+<body>
+  
+ width: 1920px;
   height: 2000px;
   background-color: #FFF;
-}
+  
+</body>
+  
+<style>
+div {
+background-image: url('matrix.gif');
+</html>
+  
+<style> 
+  
+</html> 
